Bug 1329777 - Don't bail early from SwitchRenderingMode unless there's also no buffer provider r=Bas